--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,10 @@ button {
 	cursor: pointer;
 }
 
+.accent {
+	color: #D411B0;
+}
+
 
 /* End of Universal Styles*/
 
@@ -402,8 +406,20 @@ footer {
 	}
 }
 
+/* Work Details */
 
+.work-image {
+    grid-area: 5 / 3 / 7 / 6;
+}
 
+.left-text {
+	grid-area: 6 / 1 / 7 / 2;
+    writing-mode: vertical-rl;
+}
 
+.right-text {
+	grid-area: 6 / 7 / 7 / 8;
+    writing-mode: vertical-lr;
+}
 
 
